stopped at nav bar aligning

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,13 @@
+h1{ 
+    font-family: 'Poppins', sans-serif;
+    font-size: 48px;
+}
+
+body{
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+}
+
 .inline-block {
     display: inline-block;
     vertical-align: top; 
@@ -14,7 +24,15 @@
     padding: 1%;
 }
 
-#navigationDescriptions { 
-    width: 50%;
-    margin-left: auto;
+
+.button{
+    background-color: #8733A3; /*purple*/
+    border: none;
+    border-radius: 12px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
